--- a/src/web/components/color-picker.css
+++ b/src/web/components/color-picker.css
@@ -2,9 +2,9 @@
   background: rgba(0, 0, 0, .50);
   height: 100%;
   margin: 0px;
-  overflowY: scroll;
+  overflow-y: scroll;
   padding: 0px;
-  placeSelf: center;
+  place-self: center;
   position: absolute;
   top: 0px;
   width: 100%;
@@ -12,11 +12,11 @@
 
 .colorPicker {
   display: flex;
-  flexWrap: wrap;
-  justifyContent: center;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: auto;
-  maxWidth: 65vh;
-  paddingTop: 64px;
+  max-width: 65vh;
+  padding-top: 64px;
   width: 100%;
 }
 
