--- a/src/web/stats-index.css
+++ b/src/web/stats-index.css
@@ -24,6 +24,13 @@
   padding-bottom: 8px;
 }
 
+.gamesOverTime {
+  width: 100%;
+  margin-bottom: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 .userStat {
   margin-bottom: 8px;
   padding: 2px;
