Cleanup history code
Now that only summaries are displayed, only the code that handled
rendering of full drawings is deleted.

--- a/src/web/containers/history.css
+++ b/src/web/containers/history.css
@@ -2,3 +2,27 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.title {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleInner {
+  padding: 8px;
+  max-height: calc(3 * 22px);
+  overflow-y: hidden;
+  text-overflow: ellipsis;
+}
+
+.subtitle {
+  padding: 16px;
+  width: calc(100% - 32px);
+  position: absolute;
+  text-overflow: ellipsis;
+  bottom: 0px;
+}
