Add list of contacts to new contacts page

--- a/src/web/components/account-password.css
+++ b/src/web/components/account-password.css
@@ -1,29 +1,2 @@
 @import '../common.css';
-
-.paper {
-  margin: 8px;
-  padding: 8px;
-}
-
-.title {
-  margin: 8px !important;
-}
-
-.caption {
-  margin: 8px !important;
-  display: block;
-}
-
-.text {
-  margin: 8px !important;
-  width: calc(100% - 16px) !important;
-}
-
-.buttonContainer {
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-.button {
-  margin: 8px !important;
-}
+@import './common-card.css';
